--- a/styles/main.css
+++ b/styles/main.css
@@ -24,7 +24,7 @@ body, html {
       width: 100px;
       border: 1px solid black;
       margin: 10px;
-      transition: all .2s; }
+      transition: ease-in-out .2s; }
       .game .row .box:hover {
         cursor: pointer; }
 
@@ -42,7 +42,7 @@ body, html {
 
 .glow {
   box-shadow: 0 0 13px black;
-  transform: scale(1.1); }
+  transform: scale(1.01); }
 
 .start-game {
   margin-top: 10px;
