changes class names, refactors removeGlow code

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -37,21 +37,21 @@ body, html{
     }   
 }
 
-.box-1{
+.green{
     background-color:green;
 }
 
-.box-2{
+.yellow{
     background-color:yellow;
 
 }
 
-.box-3{
+.red{
     background-color:red;
 
 }
 
-.box-4{
+.blue{
     background-color:blue;
 
 }
