--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,87 +1,88 @@
-*{
-    padding:0px;
-    margin:0px;
-    box-sizing: border-box;
+* {
+  padding: 0px;
+  margin: 0px;
+  box-sizing: border-box;
 }
 
-body, html{
+body,
+html {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  border: 1px solid red;
+  height: 100%;
+  width: 100%;
+}
+
+.game {
+  margin-top: 20px;
+  border: 1px solid black;
+
+  .row {
     display: flex;
+    flex-direction: row;
     justify-content: center;
-    align-items:center;
-    flex-direction: column;
-    border:1px solid red;
-    height:100%;
-    width:100%;
-}
 
-.game{
-    margin-top:20px;
-    border:1px solid black;
+    .box {
+      height: 100px;
+      width: 100px;
+      border: 1px solid black;
+      margin: 10px;
+      transition: ease-in-out 0.2s;
 
-    .row{
-        display: flex;
-        flex-direction:row;
-        justify-content: center;
-
-        .box{
-            height:100px;
-            width:100px;
-            border:1px solid black;
-            margin:10px;
-            transition:ease-in-out .2s;
-
-            &:hover{
-                cursor: pointer;
-            }
-        }   
-    }   
-}
-
-.green{
-    background-color:green;
-}
-
-.yellow{
-    background-color:yellow;
-
-}
-
-.red{
-    background-color:red;
-
-}
-
-.blue{
-    background-color:blue;
-
-}
-
-.glow{    
-    box-shadow: 0 0 13px black;
-    transform: scale(1.01);
-}
-
-.start-game{
-    margin-top:10px;
-    border:1px solid black;
-    padding:5px 10px;
-    border-radius:10px;
-    background-color: #f57a7a;
-
-    &:hover{
+      &:hover {
         cursor: pointer;
+      }
     }
+  }
 }
 
-.turn{
-    margin-top:10px;
-
-    .computers-turn{
-        display:none;
-    }
-
-    .your-turn{
-        display:none;
-    }
+.green {
+  background-color: green;
 }
 
+.yellow {
+  background-color: yellow;
+}
+
+.red {
+  background-color: red;
+}
+
+.blue {
+  background-color: blue;
+}
+
+.glow {
+  box-shadow: 0 0 13px black;
+  transform: scale(1.01);
+}
+
+.start-game {
+  margin-top: 10px;
+  border: 1px solid black;
+  padding: 5px 10px;
+  border-radius: 10px;
+  background-color: #f57a7a;
+
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+.turn {
+  margin-top: 10px;
+
+  .computers-turn {
+    display: none;
+  }
+
+  .your-turn {
+    display: none;
+  }
+
+  .game-over {
+    display: none;
+  }
+}
