--- a/styles/main.css
+++ b/styles/main.css
@@ -9,13 +9,22 @@ html {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  border: 1px solid red;
   height: 100%;
-  width: 100%; }
+  width: 100%;
+  min-width: 264px;
+  background-image: url("../images/space.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  font-family: "Open Sans", sans-serif;
+  text-transform: uppercase; }
+
+h1 {
+  color: #edef1ad4;
+  text-shadow: 3px 2px 6px #6b7c34; }
 
 .game {
-  margin-top: 20px;
-  border: 1px solid black; }
+  margin-top: 20px; }
   .game .row {
     display: flex;
     flex-direction: row;
@@ -23,36 +32,46 @@ html {
     .game .row .box {
       height: 100px;
       width: 100px;
-      border: 1px solid black;
-      margin: 10px;
+      margin: 3px;
       transition: ease-in-out 0.2s; }
       .game .row .box:hover {
         cursor: pointer; }
 
 .green {
-  background-color: green; }
+  background-color: #008000db;
+  border-top-left-radius: 46px;
+  border-bottom-right-radius: 15px; }
 
 .yellow {
-  background-color: yellow; }
+  background-color: #ffff00c4;
+  border-top-right-radius: 46px;
+  border-bottom-left-radius: 15px; }
 
 .red {
-  background-color: red; }
+  background-color: #ff0000d1;
+  border-bottom-left-radius: 46px;
+  border-top-right-radius: 15px; }
 
 .blue {
-  background-color: blue; }
+  background-color: #0000ffe0;
+  border-bottom-right-radius: 46px;
+  border-top-left-radius: 15px; }
 
 .glow {
-  box-shadow: 0 0 13px black;
-  transform: scale(1.01); }
+  box-shadow: inset 0 0 3px 4px black; }
 
 .start-game {
   margin-top: 10px;
   border: 1px solid black;
   padding: 5px 10px;
   border-radius: 10px;
-  background-color: #f57a7a; }
+  background-color: #3a353cb8;
+  color: #01ff12;
+  font-size: 1.2em; }
   .start-game:hover {
-    cursor: pointer; }
+    cursor: pointer;
+    box-shadow: 0px 0px 16px 0px #5c7274;
+    transition: ease-out 0.3s; }
 
 .turn {
   margin-top: 10px; }
@@ -60,7 +79,21 @@ html {
     display: none; }
   .turn .your-turn {
     display: none; }
-  .turn .game-over {
-    display: none; }
+
+.game-over {
+  display: none;
+  color: red;
+  font-size: 2em;
+  text-shadow: 4px 2px 9px #d01414; }
+
+.score,
+.your-turn,
+.computers-turn {
+  font-size: 1.1em;
+  color: #fffffffc;
+  text-shadow: 3px 2px 6px #6b7c34; }
+
+.score {
+  margin-top: 15px; }
 
 /*# sourceMappingURL=main.css.map */
