--- a/styles/main.scss
+++ b/styles/main.scss
@@ -52,7 +52,7 @@ h1 {
     flex-direction: row;
     justify-content: center;
 
-    .box {
+    .quadrant {
       height: 100px;
       width: 100px;
       margin: 3px;
@@ -95,7 +95,7 @@ h1 {
   border-top-left-radius: 15px;
 }
 
-.glow {
+.click-animation {
   // box-shadow: 0 0 13px black;
   box-shadow: inset 0 0 3px 4px black;
   // transform: scale(1.01);
