beginning of sound issue fix

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -27,7 +27,9 @@ html {
   height: 100%;
   width: 100%;
   min-width: 264px;
-  background-image: url("../images/space.jpg");
+  // background-image:url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRebCS--a-3qxujKzYdd30_6iiQrDvIsuLgYVctnqVExwh5waql2w');
+  background-image: url("../images/astronomy-constellation-dark-998641.jpg");
+  // background-color:black;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
