--- a/styles/main.css
+++ b/styles/main.css
@@ -12,7 +12,7 @@ html {
   height: 100%;
   width: 100%;
   min-width: 264px;
-  background-image: url("../images/space.jpg");
+  background-image: url("../images/astronomy-constellation-dark-998641.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
